Bug 1722115 [wpt PR 29774] - Converted many scroll animation tests to not use timeRange, a=testonly
Automatic update from web-platform-tests
Converted many scroll animation tests to not use timeRange (#29774)

The tests converted in this CL were the one that were fairly straight
forward to remove timeRange. Another follow up CL will contain the
slightly more involved conversions.

I also cleaned up the formatting for many of the tests so that they are
a bit more consistent.

Bug: 1216655
Change-Id: Ia62b32dede03eea9ed0040a684fdfb6e07a0baf1
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/3050732
Commit-Queue: Jordan Taylor <jortaylomicrosoft.com>
Reviewed-by: Kevin Ellis <keverschromium.org>
Cr-Commit-Position: refs/heads/master{#909537}

Co-authored-by: Jordan Taylor <jortaylomicrosoft.com>
--

wpt-commits: bac5e0617f1abede4a433716eb5dcb432ba29607
wpt-pr: 29774

UltraBlame original commit: 35298e31000218485a92c707a71902aa09a44d80

--- a/testing/web-platform/tests/scroll-animations/current-time-writing-modes.html
+++ b/testing/web-platform/tests/scroll-animations/current-time-writing-modes.html
@@ -121,11 +121,7 @@ src
 "
 .
 /
-resources
-/
-scrolltimeline
--
-utils
+testcommon
 .
 js
 "
@@ -182,46 +178,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -243,9 +199,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -264,9 +217,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -285,9 +235,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -306,9 +253,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -348,7 +292,7 @@ side
 for
 rtl
 .
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
@@ -361,7 +305,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
@@ -374,7 +318,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
@@ -387,7 +331,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
@@ -429,14 +373,21 @@ scroller
 .
 scrollTop
 =
-50
+0
+.
+1
+*
+scrollerSize
 ;
 scroller
 .
 scrollLeft
 =
-75
 -
+0
+.
+8
+*
 scrollerSize
 ;
 /
@@ -463,12 +414,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
 currentTime
-50
+10
 '
 Scrolled
 block
@@ -476,14 +427,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
 currentTime
-scrollerSize
--
-75
+80
 '
 Scrolled
 inline
@@ -491,14 +440,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
 currentTime
-scrollerSize
--
-75
+80
 '
 Scrolled
 horizontal
@@ -506,12 +453,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
 currentTime
-50
+10
 '
 Scrolled
 vertical
@@ -567,46 +514,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -628,9 +535,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -649,9 +553,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -670,9 +571,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -691,9 +589,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -735,7 +630,7 @@ vertical
 -
 rl
 .
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
@@ -748,7 +643,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
@@ -761,7 +656,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
@@ -774,7 +669,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
@@ -853,14 +748,21 @@ scroller
 .
 scrollTop
 =
-50
+0
+.
+1
+*
+scrollerSize
 ;
 scroller
 .
 scrollLeft
 =
-75
 -
+0
+.
+8
+*
 scrollerSize
 ;
 /
@@ -887,14 +789,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
 currentTime
-scrollerSize
--
-75
+80
 '
 Scrolled
 block
@@ -902,27 +802,25 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
 currentTime
-50
+10
 '
-SCrolled
+Scrolled
 inline
 timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
 currentTime
-scrollerSize
--
-75
+80
 '
 Scrolled
 horizontal
@@ -930,12 +828,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
 currentTime
-50
+10
 '
 Scrolled
 vertical
@@ -995,46 +893,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -1056,9 +914,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1077,9 +932,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1098,9 +950,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1119,9 +968,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1143,7 +989,7 @@ time
 of
 0
 .
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
@@ -1156,7 +1002,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
@@ -1169,7 +1015,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
@@ -1182,7 +1028,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
@@ -1245,13 +1091,21 @@ scroller
 .
 scrollTop
 =
-50
+0
+.
+1
+*
+scrollerSize
 ;
 scroller
 .
 scrollLeft
 =
-75
+0
+.
+2
+*
+scrollerSize
 ;
 /
 /
@@ -1277,12 +1131,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
 currentTime
-75
+20
 '
 Scrolled
 block
@@ -1290,12 +1144,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
 currentTime
-50
+10
 '
 Scrolled
 inline
@@ -1303,12 +1157,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
 currentTime
-75
+20
 '
 Scrolled
 horizontal
@@ -1316,12 +1170,12 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
 currentTime
-50
+10
 '
 Scrolled
 vertical
@@ -1377,46 +1231,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -1438,9 +1252,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1472,9 +1283,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1506,9 +1314,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -1568,7 +1373,7 @@ than
 the
 startScrollOffset
 .
-assert_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -1583,7 +1388,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1598,7 +1403,7 @@ timeline
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -1698,7 +1503,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -1728,7 +1533,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -1758,7 +1563,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -1767,7 +1572,6 @@ calculateCurrentTime
 (
 50
 20
-scrollerSize
 scrollerSize
 )
 '
@@ -1809,7 +1613,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1845,7 +1649,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1881,7 +1685,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1897,7 +1701,6 @@ scrollerSize
 .
 2
 *
-scrollerSize
 scrollerSize
 scrollerSize
 )
@@ -1942,7 +1745,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -1980,7 +1783,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -2016,7 +1819,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -2035,7 +1838,6 @@ scrollerSize
 scrollerSize
 -
 5
-scrollerSize
 scrollerSize
 )
 '
@@ -2096,46 +1898,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -2157,9 +1919,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2190,9 +1949,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2221,9 +1977,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2338,14 +2091,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-lengthScrollTimeline
-.
-timeRange
+100
 '
 Length
 -
@@ -2371,14 +2122,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-lengthScrollTimeline
-.
-timeRange
+100
 '
 Length
 -
@@ -2404,7 +2153,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -2418,7 +2167,6 @@ scrollerSize
 scrollerSize
 -
 20
-scrollerSize
 )
 '
 Length
@@ -2458,14 +2206,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-percentageScrollTimeline
-.
-timeRange
+100
 '
 Percentage
 -
@@ -2495,14 +2241,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-percentageScrollTimeline
-.
-timeRange
+100
 '
 Percentage
 -
@@ -2532,7 +2276,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -2549,7 +2293,6 @@ scrollerSize
 .
 8
 *
-scrollerSize
 scrollerSize
 )
 '
@@ -2595,14 +2338,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-calcScrollTimeline
-.
-timeRange
+100
 '
 Calc
 -
@@ -2633,14 +2374,12 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-calcScrollTimeline
-.
-timeRange
+100
 '
 Calc
 -
@@ -2669,7 +2408,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -2689,7 +2428,6 @@ scrollerSize
 scrollerSize
 +
 5
-scrollerSize
 )
 '
 Calc
@@ -2749,46 +2487,6 @@ setupScrollTimelineTest
 scrollerOverrides
 )
 ;
-/
-/
-Set
-the
-timeRange
-such
-that
-currentTime
-maps
-directly
-to
-the
-value
-/
-/
-scrolled
-.
-The
-contents
-and
-scroller
-are
-square
-so
-it
-suffices
-to
-compute
-/
-/
-one
-edge
-and
-use
-it
-for
-all
-the
-timelines
-.
 const
 scrollerSize
 =
@@ -2839,9 +2537,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2860,9 +2555,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2891,9 +2583,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -2922,9 +2611,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -3019,7 +2705,6 @@ scroller
 scrollLeft
 0
 scrollerSize
-scrollerSize
 )
 ;
 /
@@ -3046,7 +2731,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 inclusiveAutoScrollTimeline
 .
@@ -3063,7 +2748,7 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 inclusiveLengthScrollTimeline
 .
@@ -3082,7 +2767,7 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 inclusivePercentageScrollTimeline
 .
@@ -3101,7 +2786,7 @@ point
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 inclusiveCalcScrollTimeline
 .
@@ -3133,6 +2818,9 @@ with
 direction
 :
 rtl
+'
++
+'
 correctly
 '
 )
