--- a/testing/web-platform/tests/scroll-animations/element-based-offset-clamp.html
+++ b/testing/web-platform/tests/scroll-animations/element-based-offset-clamp.html
@@ -363,67 +363,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 function
 createScrollerWithTarget
 (
@@ -622,9 +561,6 @@ orientation
 config
 .
 orientation
-timeRange
-:
-1000
 fill
 :
 '
@@ -696,20 +632,11 @@ waitForNextFrame
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 timeline
 )
-;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 /
 /
@@ -794,7 +721,7 @@ in
 Pending
 state
 .
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -813,7 +740,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -849,7 +776,7 @@ in
 Playing
 state
 .
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -868,7 +795,7 @@ state
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -973,7 +900,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -994,13 +921,16 @@ the
 scroll
 position
 of
+"
++
+"
 the
 scroller
 .
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1019,13 +949,16 @@ the
 scroll
 position
 of
+"
++
+"
 the
 scroller
 .
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1039,7 +972,7 @@ localTime
 config
 .
 expectedCurrentTime
-'
+"
 Effect
 local
 time
@@ -1050,9 +983,12 @@ scroll
 position
 of
 the
+"
++
+"
 scroller
 .
-'
+"
 )
 ;
 }
@@ -1307,6 +1243,31 @@ with
 the
 verification
 .
+/
+/
+/
+/
+Note
+:
+expectedCurrentTime
+values
+are
+percentages
+.
+They
+are
+used
+as
+such
+:
+/
+/
+CSS
+.
+percent
+(
+expectedCurrentTime
+)
 const
 tests
 =
@@ -1342,7 +1303,7 @@ scrollTo
 300
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1381,7 +1342,7 @@ scrollTo
 300
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1420,7 +1381,7 @@ scroll_max
 2
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1457,7 +1418,7 @@ scroll_max
 2
 expectedCurrentTime
 :
-500
+50
 }
 }
 ;
