--- a/testing/web-platform/tests/scroll-animations/element-based-offset.html
+++ b/testing/web-platform/tests/scroll-animations/element-based-offset.html
@@ -294,67 +294,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 async
 function
 createScrollAnimationTest
@@ -458,9 +397,6 @@ orientation
 config
 .
 orientation
-timeRange
-:
-1000
 fill
 :
 '
@@ -522,7 +458,7 @@ waitForNextFrame
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 timeline
@@ -538,15 +474,6 @@ offsetTop
 start
 .
 offsetTop
-;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 /
 /
@@ -631,7 +558,7 @@ in
 Pending
 state
 .
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -650,7 +577,7 @@ state
 "
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -686,7 +613,7 @@ in
 Playing
 state
 .
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -705,7 +632,7 @@ state
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -810,7 +737,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -831,13 +758,16 @@ the
 scroll
 position
 of
+"
++
+"
 the
 scroller
 .
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -856,13 +786,16 @@ the
 scroll
 position
 of
+"
++
+"
 the
 scroller
 .
 "
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -876,7 +809,7 @@ localTime
 config
 .
 expectedCurrentTime
-'
+"
 Effect
 local
 time
@@ -887,9 +820,12 @@ scroll
 position
 of
 the
+"
++
+"
 scroller
 .
-'
+"
 )
 ;
 }
@@ -941,6 +877,31 @@ the
 /
 verification
 .
+/
+/
+/
+/
+Note
+:
+expectedCurrentTime
+values
+are
+percentages
+.
+They
+are
+used
+as
+such
+:
+/
+/
+CSS
+.
+percent
+(
+expectedCurrentTime
+)
 const
 tests
 =
@@ -985,7 +946,7 @@ scrollTo
 200
 expectedCurrentTime
 :
-100
+10
 }
 /
 /
@@ -1006,7 +967,7 @@ scrollTo
 600
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1027,7 +988,9 @@ scrollTo
 1099
 expectedCurrentTime
 :
-999
+99
+.
+9
 }
 /
 /
@@ -1048,7 +1011,7 @@ scrollTo
 1150
 expectedCurrentTime
 :
-1000
+100
 }
 /
 /
@@ -1112,7 +1075,7 @@ scrollTo
 25
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1156,7 +1119,7 @@ scrollTo
 50
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1187,7 +1150,7 @@ scrollTo
 325
 expectedCurrentTime
 :
-500
+50
 }
 /
 /
@@ -1228,7 +1191,7 @@ scrollTo
 350
 expectedCurrentTime
 :
-500
+50
 }
 }
 ;
