--- a/testing/web-platform/tests/scroll-animations/play-animation.html
+++ b/testing/web-platform/tests/scroll-animations/play-animation.html
@@ -175,67 +175,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -246,7 +185,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -285,14 +224,22 @@ animation
 .
 currentTime
 =
-100
+CSSNumericValue
+.
+parse
+(
+"
+10
+%
+"
+)
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-100
+10
 )
 ;
 animation
@@ -301,12 +248,12 @@ play
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-100
+10
 )
 ;
 }
@@ -333,7 +280,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -374,12 +321,12 @@ finish
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 animation
@@ -388,7 +335,7 @@ play
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
@@ -420,7 +367,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -466,9 +413,17 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 0
+%
+"
+)
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
@@ -482,12 +437,12 @@ play
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 }
@@ -514,7 +469,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -588,7 +543,7 @@ animation
 .
 ready
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -605,10 +560,10 @@ the
 current
 time
 should
+jump
 '
 +
 '
-jump
 back
 to
 the
@@ -652,7 +607,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -704,7 +659,7 @@ play
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -741,7 +696,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -834,7 +789,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -931,7 +886,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -970,7 +925,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 await
 animation
@@ -1006,7 +969,7 @@ animation
 .
 ready
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1016,8 +979,12 @@ animation
 timeline
 .
 currentTime
+.
+value
 -
 holdTime
+.
+value
 )
 ;
 }
@@ -1046,7 +1013,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1167,9 +1134,6 @@ when
 playing
 while
 waiting
-'
-+
-'
 to
 pause
 '
@@ -1251,7 +1215,7 @@ end
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1290,8 +1254,16 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-1000
+100
+%
+"
+)
 ;
 await
 animation
@@ -1370,12 +1342,12 @@ play
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 }
@@ -1405,7 +1377,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1502,7 +1474,7 @@ pending
 '
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
@@ -1545,7 +1517,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1608,15 +1580,6 @@ unresolved
 '
 )
 ;
-const
-playTime
-=
-animation
-.
-timeline
-.
-currentTime
-;
 animation
 .
 play
@@ -1658,12 +1621,12 @@ pending
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-1000
+100
 '
 The
 start
