--- a/testing/web-platform/tests/scroll-animations/reverse-animation.html
+++ b/testing/web-platform/tests/scroll-animations/reverse-animation.html
@@ -175,67 +175,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -246,7 +185,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -290,7 +229,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 const
 previousPlaybackRate
@@ -364,7 +311,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -403,7 +350,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 animation
 .
@@ -411,12 +366,12 @@ reverse
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 '
 The
 current
@@ -428,11 +383,11 @@ it
 is
 in
 the
-middle
-of
 '
 +
 '
+middle
+of
 the
 animation
 duration
@@ -462,7 +417,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -564,7 +519,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -677,7 +632,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -716,7 +671,15 @@ animation
 .
 currentTime
 =
-2000
+CSSNumericValue
+.
+parse
+(
+"
+200
+%
+"
+)
 ;
 animation
 .
@@ -724,12 +687,12 @@ reverse
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 '
 reverse
 (
@@ -740,11 +703,11 @@ playing
 from
 the
 animation
-effect
-end
 '
 +
 '
+effect
+end
 if
 the
 playbackRate
@@ -752,6 +715,9 @@ playbackRate
 0
 and
 the
+'
++
+'
 currentTime
 >
 effect
@@ -771,10 +737,10 @@ playbackRate
 and
 currentTime
 >
+effect
 '
 +
 '
-effect
 end
 should
 make
@@ -796,7 +762,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -835,8 +801,16 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-2000
+200
+%
+"
+)
 ;
 animation
 .
@@ -844,12 +818,12 @@ reverse
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 '
 reverse
 (
@@ -860,11 +834,11 @@ playing
 from
 the
 animation
-effect
-end
 '
 +
 '
+effect
+end
 if
 the
 playbackRate
@@ -872,6 +846,9 @@ playbackRate
 0
 and
 the
+'
++
+'
 currentTime
 <
 0
@@ -891,10 +868,10 @@ and
 currentTime
 <
 0
+should
 '
 +
 '
-should
 make
 it
 play
@@ -914,7 +891,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -960,8 +937,16 @@ animation
 .
 currentTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-2000
+200
+%
+"
+)
 ;
 animation
 .
@@ -969,132 +954,7 @@ reverse
 (
 )
 ;
-assert_times_equal
-(
-animation
-.
-currentTime
-0
-'
-reverse
-(
-)
-should
-start
-playing
-from
-the
-start
-of
-animation
-time
-'
-+
-'
-if
-the
-playbackRate
-<
-0
-and
-the
-currentTime
-<
-0
-'
-)
-;
-}
-'
-Reversing
-an
-animation
-when
-playbackRate
-<
-0
-and
-currentTime
-<
-0
-'
-+
-'
-should
-make
-it
-play
-from
-the
-start
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimationWithTimeRange
-(
-t
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-playbackRate
-=
--
-1
-;
-animation
-.
-currentTime
-=
-2000
-;
-animation
-.
-reverse
-(
-)
-;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1111,11 +971,11 @@ from
 the
 start
 of
-animation
-time
 '
 +
 '
+animation
+time
 if
 the
 playbackRate
@@ -1123,10 +983,12 @@ playbackRate
 0
 and
 the
+'
++
+'
 currentTime
->
-effect
-end
+<
+0
 '
 )
 ;
@@ -1141,13 +1003,12 @@ playbackRate
 0
 and
 currentTime
->
-effect
+<
+0
+should
 '
 +
 '
-end
-should
 make
 it
 play
@@ -1167,429 +1028,9 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-currentTime
-=
--
-2000
-;
-assert_throws_dom
-(
-'
-InvalidStateError
-'
-(
-)
-=
->
-{
-animation
-.
-reverse
-(
-)
-;
-}
-'
-reverse
-(
-)
-should
-throw
-InvalidStateError
-'
-+
-'
-if
-the
-playbackRate
->
-0
-and
-the
-currentTime
-<
-0
-'
-+
-'
-and
-the
-target
-effect
-is
-positive
-infinity
-'
-)
-;
-}
-'
-Reversing
-an
-animation
-when
-playbackRate
->
-0
-and
-currentTime
-<
-0
-'
-+
-'
-and
-the
-target
-effect
-end
-is
-positive
-infinity
-should
-throw
-an
-exception
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimationWithTimeRange
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-currentTime
-=
--
-2000
-;
-try
-{
-animation
-.
-reverse
-(
-)
-;
-}
-catch
-(
-e
-)
-{
-}
-assert_equals
-(
-animation
-.
-playbackRate
-1
-'
-playbackRate
-is
-unchanged
-'
-)
-;
-await
-animation
-.
-ready
-;
-assert_equals
-(
-animation
-.
-playbackRate
-1
-'
-playbackRate
-remains
-unchanged
-'
-)
-;
-}
-'
-When
-reversing
-throws
-an
-exception
-the
-playback
-rate
-remains
-unchanged
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimationWithTimeRange
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-currentTime
-=
--
-2000
-;
-animation
-.
-playbackRate
-=
-0
-;
-try
-{
-animation
-.
-reverse
-(
-)
-;
-}
-catch
-(
-e
-)
-{
-assert_unreached
-(
-Unexpected
-exception
-when
-calling
-reverse
-(
-)
-:
-{
-e
-}
-)
-;
-}
-}
-'
-Reversing
-animation
-when
-playbackRate
-=
-0
-and
-currentTime
-<
-0
-'
-+
-'
-and
-the
-target
-effect
-end
-is
-positive
-infinity
-should
-NOT
-throw
-an
-'
-+
-'
-exception
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimationWithTimeRange
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
 )
 ;
 /
@@ -1633,8 +1074,15 @@ animation
 .
 currentTime
 =
--
-2000
+CSSNumericValue
+.
+parse
+(
+"
+200
+%
+"
+)
 ;
 animation
 .
@@ -1642,7 +1090,7 @@ reverse
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1659,11 +1107,11 @@ from
 the
 start
 of
-animation
-time
 '
 +
 '
+animation
+time
 if
 the
 playbackRate
@@ -1671,19 +1119,13 @@ playbackRate
 0
 and
 the
-currentTime
-<
-0
 '
 +
 '
-and
-the
-target
+currentTime
+>
 effect
-is
-positive
-infinity
+end
 '
 )
 ;
@@ -1698,26 +1140,16 @@ playbackRate
 0
 and
 currentTime
-<
-0
+>
+effect
 '
 +
 '
-and
-the
-target
-effect
 end
-is
-positive
-infinity
 should
 make
 it
 play
-'
-+
-'
 from
 the
 start
@@ -1734,7 +1166,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1779,7 +1211,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 animation
 .
@@ -1814,12 +1254,12 @@ playbackRate
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 '
 reverse
 (
@@ -1851,10 +1291,10 @@ should
 preserve
 the
 current
+time
 '
 +
 '
-time
 and
 playback
 rate
@@ -1871,7 +1311,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1919,12 +1359,12 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
-1000
+100
 '
 animation
 .
@@ -1938,12 +1378,12 @@ end
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 '
 animation
 .
@@ -1981,7 +1421,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2088,7 +1528,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2127,7 +1567,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 animation
 .
@@ -2197,7 +1645,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2273,144 +1721,6 @@ the
 negative
 pending
 playback
-rate
-'
-)
-;
-promise_test
-(
-async
-t
-=
->
-{
-const
-animation
-=
-createScrollLinkedAnimationWithTimeRange
-(
-t
-)
-;
-animation
-.
-effect
-.
-updateTiming
-(
-{
-iterations
-:
-Infinity
-}
-)
-;
-/
-/
-Wait
-for
-new
-animation
-frame
-which
-allows
-the
-timeline
-to
-compute
-new
-/
-/
-current
-time
-.
-await
-waitForNextFrame
-(
-)
-;
-animation
-.
-play
-(
-)
-;
-animation
-.
-currentTime
-=
--
-200
-*
-MS_PER_SEC
-;
-await
-animation
-.
-ready
-;
-animation
-.
-updatePlaybackRate
-(
-2
-)
-;
-assert_throws_dom
-(
-'
-InvalidStateError
-'
-(
-)
-=
->
-{
-animation
-.
-reverse
-(
-)
-;
-}
-)
-;
-assert_equals
-(
-animation
-.
-playbackRate
-1
-)
-;
-await
-animation
-.
-ready
-;
-assert_equals
-(
-animation
-.
-playbackRate
-2
-)
-;
-}
-'
-When
-reversing
-fails
-it
-should
-restore
-any
-previous
-pending
-playback
-'
-+
-'
 rate
 '
 )
