--- a/testing/web-platform/tests/scroll-animations/scroll-animation-inactive-timeline.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-animation-inactive-timeline.html
@@ -155,67 +155,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -226,7 +165,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -339,7 +278,7 @@ inactive
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -375,7 +314,6 @@ play
 pending
 task
 while
-the
 timeline
 is
 inactive
@@ -391,28 +329,22 @@ playState
 '
 running
 '
-'
 State
 is
-\
 '
 running
-\
 '
 in
 Pending
 state
 .
-'
 )
 ;
 }
-'
 Play
 pending
 task
 doesn
-\
 '
 t
 run
@@ -422,7 +354,6 @@ timeline
 is
 inactive
 .
-'
 )
 ;
 promise_test
@@ -435,7 +366,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -565,7 +496,7 @@ timeline
 becoming
 active
 .
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -586,7 +517,7 @@ ready
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -643,7 +574,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -746,7 +677,15 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 0
+%
+"
+)
 ;
 assert_equals
 (
@@ -764,6 +703,9 @@ unresolved
 when
 the
 timeline
+'
++
+'
 is
 inactive
 .
@@ -812,7 +754,7 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -833,7 +775,7 @@ active
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -849,7 +791,7 @@ resolved
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -937,7 +879,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1087,13 +1029,10 @@ playState
 '
 running
 '
-'
 State
 is
-\
 '
 running
-\
 '
 when
 the
@@ -1101,7 +1040,6 @@ timeline
 is
 inactive
 .
-'
 )
 ;
 assert_equals
@@ -1124,7 +1062,7 @@ inactive
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1230,13 +1168,10 @@ playState
 '
 running
 '
-'
 State
 is
-\
 '
 running
-\
 '
 when
 the
@@ -1244,15 +1179,14 @@ timeline
 is
 active
 .
-'
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-200
+20
 '
 Current
 time
@@ -1267,7 +1201,7 @@ active
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1287,7 +1221,7 @@ active
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1298,7 +1232,7 @@ getComputedTiming
 )
 .
 localTime
-200
+20
 '
 Effect
 local
