--- a/testing/web-platform/tests/scroll-animations/scroll-timeline-snapshotting.html
+++ b/testing/web-platform/tests/scroll-animations/scroll-timeline-snapshotting.html
@@ -161,6 +161,22 @@ js
 script
 >
 <
+script
+src
+=
+"
+.
+/
+testcommon
+.
+js
+"
+>
+<
+/
+script
+>
+<
 style
 >
 body
@@ -233,9 +249,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-maxScroll
 }
 )
 ;
@@ -277,6 +290,7 @@ smooth
 '
 }
 )
+;
 /
 /
 Wait
@@ -311,14 +325,20 @@ scrollTop
 startScroll
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 timeline
 .
 currentTime
+(
 scroller
 .
 scrollTop
+/
+maxScroll
+)
+*
+100
 '
 Scroll
 timeline
@@ -343,6 +363,9 @@ updated
 after
 programmatic
 animated
+'
++
+'
 scroll
 .
 '
