--- a/testing/web-platform/tests/scroll-animations/setting-playback-rate.html
+++ b/testing/web-platform/tests/scroll-animations/setting-playback-rate.html
@@ -190,67 +190,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -261,7 +200,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -331,7 +270,7 @@ play
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -386,7 +325,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -456,7 +395,7 @@ playbackRate
 .
 5
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -513,7 +452,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -537,15 +476,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 scroller
 .
@@ -600,20 +530,12 @@ animation
 .
 ready
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-0
-.
-2
-*
-timeRange
-*
-0
-.
-5
+10
 '
 Initial
 current
@@ -663,7 +585,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -687,15 +609,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 const
 playbackRate
@@ -764,16 +677,12 @@ playbackRate
 =
 playbackRate
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-0
-.
-2
-*
-timeRange
+20
 '
 The
 current
@@ -827,7 +736,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -851,15 +760,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-timeRange
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 /
 /
@@ -927,18 +827,12 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-0
-.
-2
-*
-timeRange
-*
-2
+40
 '
 The
 current
@@ -948,6 +842,9 @@ increase
 two
 times
 faster
+'
++
+'
 than
 timeline
 time
@@ -993,7 +890,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1069,7 +966,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1079,6 +976,8 @@ animation
 timeline
 .
 currentTime
+.
+value
 *
 animation
 .
@@ -1130,7 +1029,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1218,7 +1117,7 @@ animation
 pending
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1262,7 +1161,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1277,7 +1176,15 @@ animation
 .
 currentTime
 =
-250
+CSSNumericValue
+.
+parse
+(
+"
+25
+%
+"
+)
 ;
 animation
 .
@@ -1302,12 +1209,12 @@ animation
 pending
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-250
+25
 )
 ;
 }
@@ -1342,7 +1249,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1418,7 +1325,7 @@ playbackRate
 =
 2
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1461,7 +1368,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1515,7 +1422,15 @@ animation
 .
 currentTime
 =
-250
+CSSNumericValue
+.
+parse
+(
+"
+25
+%
+"
+)
 ;
 await
 animation
@@ -1528,12 +1443,12 @@ playbackRate
 =
 2
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-250
+25
 )
 ;
 }
@@ -1563,7 +1478,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1587,15 +1502,6 @@ scrollHeight
 scroller
 .
 clientHeight
-;
-const
-range
-=
-animation
-.
-timeline
-.
-timeRange
 ;
 animation
 .
@@ -1652,15 +1558,17 @@ ready
 const
 expectedCurrentTime
 =
-range
+100
 -
 animation
 .
 timeline
 .
 currentTime
+.
+value
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1697,7 +1605,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1783,7 +1691,7 @@ animation
 .
 currentTime
 ;
-assert_times_equal
+assert_percents_equal
 (
 startingCurrentTime
 startingTimelineTime
@@ -1823,12 +1731,16 @@ let
 timelineDiff
 =
 startingTimelineTime
+.
+value
 -
 animation
 .
 timeline
 .
 currentTime
+.
+value
 ;
 /
 /
@@ -1844,10 +1756,12 @@ let
 expected
 =
 startingCurrentTime
+.
+value
 +
 timelineDiff
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1880,12 +1794,16 @@ waitForNextFrame
 timelineDiff
 =
 startingTimelineTime
+.
+value
 -
 animation
 .
 timeline
 .
 currentTime
+.
+value
 ;
 /
 /
@@ -1897,10 +1815,12 @@ currentTime
 expected
 =
 startingCurrentTime
+.
+value
 +
 timelineDiff
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1939,7 +1859,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2024,7 +1944,7 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -2061,7 +1981,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -2131,12 +2051,12 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-200
+20
 )
 ;
 animation
@@ -2170,22 +2090,22 @@ does
 not
 change
 .
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 timeline
 .
 currentTime
-500
+50
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-200
+20
 )
 ;
 }
