--- a/testing/web-platform/tests/scroll-animations/setting-timeline.tentative.html
+++ b/testing/web-platform/tests/scroll-animations/setting-timeline.tentative.html
@@ -225,67 +225,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 function
 createAnimation
 (
@@ -422,19 +361,24 @@ animation
 timeline_current_time
 )
 {
-assert_times_equal
+if
+(
+animation
+.
+currentTime
+instanceof
+CSSUnitValue
+)
+{
+assert_percents_equal
 (
 animation
 .
 timeline
 .
 currentTime
-.
-value
 timeline_current_time
-'
 Timeline
-\
 '
 s
 currentTime
@@ -442,16 +386,40 @@ aligns
 with
 the
 scroll
-'
 +
-'
 position
 even
 when
 paused
-'
 )
 ;
+}
+else
+{
+assert_times_equal
+(
+animation
+.
+timeline
+.
+currentTime
+timeline_current_time
+Timeline
+'
+s
+currentTime
+aligns
+with
+the
+scroll
++
+position
+even
+when
+paused
+)
+;
+}
 }
 function
 assert_scroll_synced_times
@@ -467,17 +435,22 @@ animation
 timeline_current_time
 )
 ;
-assert_times_equal
+if
 (
 animation
 .
 currentTime
+instanceof
+CSSUnitValue
+)
+{
+assert_percents_equal
+(
+animation
 .
-value
+currentTime
 animation_current_time
-'
 Animation
-\
 '
 s
 currentTime
@@ -485,13 +458,30 @@ aligns
 with
 the
 scroll
-'
-+
-'
 position
-'
 )
 ;
+}
+else
+{
+assert_times_equal
+(
+animation
+.
+currentTime
+animation_current_time
+Animation
+'
+s
+currentTime
+aligns
+with
+the
+scroll
+position
+)
+;
+}
 }
 function
 assert_paused_times
@@ -507,17 +497,22 @@ animation
 timeline_current_time
 )
 ;
-assert_times_equal
+if
 (
 animation
 .
 currentTime
+instanceof
+CSSUnitValue
+)
+{
+assert_percents_equal
+(
+animation
 .
-value
+currentTime
 animation_current_time
-'
 Animation
-\
 '
 s
 currentTime
@@ -525,9 +520,28 @@ is
 fixed
 while
 paused
-'
 )
 ;
+}
+else
+{
+assert_times_equal
+(
+animation
+.
+currentTime
+animation_current_time
+Animation
+'
+s
+currentTime
+is
+fixed
+while
+paused
+)
+;
+}
 }
 promise_test
 (
@@ -1221,7 +1235,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimelineWithTimeRange
+createScrollTimeline
 (
 t
 )
@@ -1301,7 +1315,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimelineWithTimeRange
+createScrollTimeline
 (
 t
 )
@@ -1676,13 +1690,11 @@ running
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-.
-value
 10
 )
 ;
@@ -1771,13 +1783,11 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-.
-value
 10
 )
 ;
@@ -1787,13 +1797,11 @@ timeline
 =
 secondScrollTimeline
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-.
-value
 20
 )
 ;
@@ -1862,13 +1870,11 @@ paused
 '
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-.
-value
 0
 )
 ;
@@ -1896,13 +1902,11 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-.
-value
 10
 )
 ;
@@ -1940,7 +1944,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimelineWithTimeRange
+createScrollTimeline
 (
 t
 )
@@ -1977,7 +1981,7 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -1989,7 +1993,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 animation
 .
@@ -2002,12 +2014,12 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 )
 ;
 }
@@ -2047,7 +2059,7 @@ t
 const
 scrollTimeline
 =
-createScrollTimelineWithTimeRange
+createScrollTimeline
 (
 t
 )
@@ -2084,7 +2096,7 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
@@ -2137,8 +2149,16 @@ animation
 .
 startTime
 =
+CSSNumericValue
+.
+parse
+(
+"
 -
-100
+10
+%
+"
+)
 ;
 assert_equals
 (
@@ -2161,13 +2181,13 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 startTime
 -
-100
+10
 )
 ;
 }
