--- a/testing/web-platform/tests/scroll-animations/update-playback-rate.html
+++ b/testing/web-platform/tests/scroll-animations/update-playback-rate.html
@@ -190,67 +190,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -261,7 +200,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -305,7 +244,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 animation
 .
@@ -321,12 +268,12 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 '
 Reducing
 the
@@ -336,11 +283,11 @@ should
 not
 change
 the
-current
-time
 '
 +
 '
+current
+time
 of
 a
 playing
@@ -360,12 +307,12 @@ animation
 .
 ready
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 '
 Increasing
 the
@@ -375,11 +322,11 @@ should
 not
 change
 the
-current
-time
 '
 +
 '
+current
+time
 of
 a
 playing
@@ -410,7 +357,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -496,7 +443,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -535,7 +482,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 assert_true
 (
@@ -564,12 +519,12 @@ is
 updated
 as
 expected
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 )
 ;
 await
@@ -602,12 +557,12 @@ updating
 the
 startTime
 .
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 '
 Reducing
 the
@@ -617,11 +572,11 @@ should
 not
 change
 the
-current
-time
 '
 +
 '
+current
+time
 of
 a
 play
@@ -644,10 +599,10 @@ play
 pending
 animation
 maintains
+the
 '
 +
 '
-the
 current
 time
 '
@@ -663,7 +618,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -702,7 +657,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 await
 animation
@@ -724,12 +687,12 @@ updatePlaybackRate
 5
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 animation
 .
 currentTime
-500
+50
 )
 ;
 }
@@ -745,10 +708,10 @@ pause
 pending
 animation
 maintains
+the
 '
 +
 '
-the
 current
 time
 '
@@ -764,7 +727,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -868,7 +831,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -956,7 +919,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1043,7 +1006,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1084,12 +1047,12 @@ finish
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 assert_false
@@ -1114,12 +1077,12 @@ playbackRate
 2
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 assert_false
@@ -1140,11 +1103,11 @@ a
 finished
 animation
 maintains
+the
+current
 '
 +
 '
-the
-current
 time
 '
 )
@@ -1159,7 +1122,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1200,12 +1163,12 @@ finish
 (
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 assert_false
@@ -1230,12 +1193,12 @@ playbackRate
 0
 )
 ;
-assert_time_equals_literal
+assert_percents_equal
 (
 animation
 .
 currentTime
-1000
+100
 )
 ;
 assert_false
@@ -1258,10 +1221,10 @@ a
 finished
 animation
 maintains
+the
 '
 +
 '
-the
 current
 time
 '
