--- a/testing/web-platform/tests/scroll-animations/current-time.html
+++ b/testing/web-platform/tests/scroll-animations/current-time.html
@@ -116,26 +116,6 @@ src
 "
 .
 /
-resources
-/
-scrolltimeline
--
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-.
-/
 testcommon
 .
 js
@@ -347,12 +327,11 @@ currentTime
 of
 0
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -361,12 +340,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -375,12 +353,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -389,12 +366,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -452,7 +428,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
@@ -460,9 +436,6 @@ currentTime
 12
 .
 048
-0
-.
-01
 '
 Scrolled
 block
@@ -470,7 +443,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
@@ -478,9 +451,6 @@ currentTime
 18
 .
 072
-0
-.
-01
 '
 Scrolled
 inline
@@ -488,7 +458,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
@@ -496,9 +466,6 @@ currentTime
 18
 .
 072
-0
-.
-01
 '
 Scrolled
 horizontal
@@ -506,7 +473,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
@@ -514,9 +481,6 @@ currentTime
 12
 .
 048
-0
-.
-01
 '
 Scrolled
 vertical
@@ -694,12 +658,11 @@ than
 the
 startScrollOffset
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -730,12 +693,11 @@ phase
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -766,12 +728,11 @@ phase
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -841,12 +802,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Length
@@ -858,9 +818,6 @@ time
 before
 the
 startScrollOffset
-'
-+
-'
 point
 '
 )
@@ -897,12 +854,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Length
@@ -950,7 +906,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -960,11 +916,7 @@ calculateCurrentTime
 50
 20
 scrollerSize
-100
 )
-0
-.
-01
 '
 Length
 -
@@ -1024,12 +976,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Percentage
@@ -1084,12 +1035,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Percentage
@@ -1141,7 +1091,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1157,11 +1107,7 @@ scrollTop
 *
 scrollerSize
 scrollerSize
-100
 )
-0
-.
-01
 '
 Percentage
 -
@@ -1226,12 +1172,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Calc
@@ -1285,12 +1230,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Calc
@@ -1342,7 +1286,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -1360,11 +1304,7 @@ scrollerSize
 -
 5
 scrollerSize
-100
 )
-0
-.
-01
 '
 Calc
 -
@@ -1595,7 +1535,6 @@ scroller
 scrollTop
 0
 scrollerSize
-100
 )
 ;
 /
@@ -1622,15 +1561,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveAutoScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 auto
@@ -1642,18 +1578,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveLengthScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
-0
-.
-01
 '
 Inclusive
 length
@@ -1667,15 +1597,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusivePercentageScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 percentage
@@ -1689,15 +1616,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveCalcScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 calc
@@ -1884,15 +1808,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Length
 -
@@ -1941,15 +1862,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Length
 -
@@ -1998,7 +1916,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -2012,11 +1930,7 @@ scrollerSize
 scrollerSize
 -
 20
-100
 )
-0
-.
-01
 '
 Length
 -
@@ -2076,15 +1990,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Percentage
 -
@@ -2135,15 +2046,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Percentage
 -
@@ -2194,7 +2102,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -2210,11 +2118,7 @@ scrollTop
 8
 *
 scrollerSize
-100
 )
-0
-.
-01
 '
 Percentage
 -
@@ -2225,6 +2129,9 @@ time
 before
 the
 endScrollOffset
+'
++
+'
 point
 '
 )
@@ -2276,15 +2183,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Calc
 -
@@ -2337,15 +2241,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Calc
 -
@@ -2396,7 +2297,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -2414,11 +2315,7 @@ scrollTop
 scrollerSize
 +
 5
-100
 )
-0
-.
-01
 '
 Calc
 -
@@ -2554,7 +2451,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -2566,11 +2463,7 @@ calculateCurrentTime
 scrollerSize
 -
 50
-100
 )
-0
-.
-01
 )
 ;
 }
@@ -2581,6 +2474,9 @@ startScrollOffset
 and
 endScrollOffset
 together
+'
++
+'
 correctly
 '
 )
@@ -2663,15 +2559,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 )
 ;
 }
@@ -2764,15 +2657,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 0
-0
-.
-01
 )
 ;
 scroller
@@ -2786,15 +2676,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 )
 ;
 }
@@ -2931,7 +2818,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -2945,9 +2832,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -2987,7 +2871,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3001,9 +2885,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3037,7 +2918,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3051,9 +2932,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3093,7 +2971,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3107,9 +2985,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3143,7 +3018,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3157,9 +3032,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3199,7 +3071,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3213,9 +3085,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3249,7 +3118,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3263,9 +3132,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3305,7 +3171,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3319,9 +3185,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3347,15 +3210,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 "
 current
 time
