--- a/testing/web-platform/tests/scroll-animations/multiple-scroll-offsets.html
+++ b/testing/web-platform/tests/scroll-animations/multiple-scroll-offsets.html
@@ -116,11 +116,7 @@ src
 "
 .
 /
-resources
-/
-scrolltimeline
--
-utils
+testcommon
 .
 js
 "
@@ -179,9 +175,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -257,7 +250,7 @@ scrollTop
 =
 10
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -270,7 +263,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -310,7 +303,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -323,7 +316,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -357,7 +350,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -370,7 +363,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -410,7 +403,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -423,7 +416,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -457,7 +450,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -470,7 +463,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -510,7 +503,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -523,7 +516,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -557,7 +550,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -570,7 +563,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -610,7 +603,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -623,7 +616,7 @@ p
 *
 w
 *
-scrollerSize
+100
 "
 current
 time
@@ -649,12 +642,12 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
-scrollerSize
+100
 "
 current
 time
@@ -717,9 +710,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -761,7 +751,7 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -792,12 +782,12 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
-scrollerSize
+100
 "
 current
 time
@@ -821,9 +811,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -862,20 +849,14 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
-0
-.
-25
-*
-0
+12
 .
 5
-*
-scrollerSize
 "
 current
 time
@@ -899,9 +880,6 @@ ScrollTimeline
 scrollSource
 :
 scroller
-timeRange
-:
-scrollerSize
 orientation
 :
 '
@@ -943,26 +921,12 @@ waitForNextFrame
 (
 )
 ;
-assert_times_equal
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
-0
-.
-5
-*
-scrollerSize
-+
-0
-.
-5
-*
-0
-.
-5
-*
-scrollerSize
+75
 "
 current
 time
