--- a/testing/web-platform/tests/scroll-animations/pause-animation.html
+++ b/testing/web-platform/tests/scroll-animations/pause-animation.html
@@ -175,67 +175,6 @@ use
 strict
 '
 ;
-/
-/
-TODO
-(
-crbug
-.
-com
-/
-1216655
-)
-:
-Remove
-time
-range
-.
-Once
-time
-range
-is
-removed
-all
-/
-/
-functions
-that
-include
-.
-.
-.
-WithTimeRange
-(
-)
-should
-be
-replaced
-with
-the
-same
-/
-/
-function
-but
-without
-that
-ending
-.
-For
-example
-:
-/
-/
-/
-/
-createScrollLinkedAnimationWithTimeRange
-(
-)
-=
->
-createScrollLinkedAnimation
-(
-)
 promise_test
 (
 async
@@ -246,7 +185,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -299,7 +238,7 @@ pause
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -361,7 +300,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -474,7 +413,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -589,7 +528,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -638,7 +577,15 @@ animation
 .
 currentTime
 =
-500
+CSSNumericValue
+.
+parse
+(
+"
+50
+%
+"
+)
 ;
 await
 animation
@@ -724,7 +671,9 @@ assert_greater_than_equal
 animation
 .
 currentTime
-500
+.
+value
+50
 )
 ;
 }
@@ -796,7 +745,7 @@ time
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -889,14 +838,14 @@ waitForNextFrame
 (
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
 timeline
 .
 currentTime
-200
+20
 '
 Sanity
 check
@@ -906,7 +855,7 @@ changed
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -949,7 +898,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1116,7 +1065,7 @@ unresolved
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1156,7 +1105,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1273,7 +1222,7 @@ inactive
 '
 )
 ;
-assert_equals
+assert_percents_equal
 (
 animation
 .
@@ -1325,28 +1274,22 @@ playState
 '
 paused
 '
-'
 State
 is
-\
 '
 paused
-\
 '
 in
 Pending
 state
 .
-'
 )
 ;
 }
-'
 Pause
 pending
 task
 doesn
-\
 '
 t
 run
@@ -1356,7 +1299,6 @@ timeline
 is
 inactive
 .
-'
 )
 ;
 promise_test
@@ -1369,7 +1311,7 @@ t
 const
 animation
 =
-createScrollLinkedAnimationWithTimeRange
+createScrollLinkedAnimation
 (
 t
 )
@@ -1524,12 +1466,12 @@ timeline
 becoming
 active
 .
-assert_equals
+assert_percents_equal
 (
 animation
 .
 currentTime
-200
+20
 '
 Animation
 current
