--- a/testing/web-platform/tests/scroll-animations/progress-based-current-time.tentative.html
+++ b/testing/web-platform/tests/scroll-animations/progress-based-current-time.tentative.html
@@ -116,26 +116,6 @@ src
 "
 .
 /
-resources
-/
-scrolltimeline
--
-utils
-.
-js
-"
->
-<
-/
-script
->
-<
-script
-src
-=
-"
-.
-/
 testcommon
 .
 js
@@ -173,17 +153,6 @@ scroller
 setupScrollTimelineTest
 (
 )
-;
-const
-scrollerSize
-=
-scroller
-.
-scrollHeight
--
-scroller
-.
-clientHeight
 ;
 const
 blockScrollTimeline
@@ -358,12 +327,11 @@ currentTime
 of
 0
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -372,12 +340,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -386,12 +353,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -400,12 +366,11 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -463,7 +428,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 blockScrollTimeline
 .
@@ -471,9 +436,6 @@ currentTime
 12
 .
 048
-0
-.
-01
 '
 Scrolled
 block
@@ -481,7 +443,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inlineScrollTimeline
 .
@@ -489,9 +451,6 @@ currentTime
 18
 .
 072
-0
-.
-01
 '
 Scrolled
 inline
@@ -499,7 +458,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 horizontalScrollTimeline
 .
@@ -507,9 +466,6 @@ currentTime
 18
 .
 072
-0
-.
-01
 '
 Scrolled
 horizontal
@@ -517,7 +473,7 @@ timeline
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 verticalScrollTimeline
 .
@@ -525,9 +481,6 @@ currentTime
 12
 .
 048
-0
-.
-01
 '
 Scrolled
 vertical
@@ -705,12 +658,11 @@ than
 the
 startScrollOffset
 .
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -741,12 +693,11 @@ phase
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -777,12 +728,11 @@ phase
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Unscrolled
@@ -852,12 +802,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Length
@@ -869,9 +818,6 @@ time
 before
 the
 startScrollOffset
-'
-+
-'
 point
 '
 )
@@ -908,12 +854,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
-0
 0
 '
 Length
@@ -961,7 +906,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -971,11 +916,7 @@ calculateCurrentTime
 50
 20
 scrollerSize
-100
 )
-0
-.
-01
 '
 Length
 -
@@ -1035,12 +976,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Percentage
@@ -1095,12 +1035,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
-0
 0
 '
 Percentage
@@ -1152,7 +1091,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -1168,11 +1107,7 @@ scrollTop
 *
 scrollerSize
 scrollerSize
-100
 )
-0
-.
-01
 '
 Percentage
 -
@@ -1237,12 +1172,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Calc
@@ -1296,12 +1230,11 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
-0
 0
 '
 Calc
@@ -1353,7 +1286,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -1371,11 +1304,7 @@ scrollerSize
 -
 5
 scrollerSize
-100
 )
-0
-.
-01
 '
 Calc
 -
@@ -1606,7 +1535,6 @@ scroller
 scrollTop
 0
 scrollerSize
-100
 )
 ;
 /
@@ -1633,15 +1561,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveAutoScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 auto
@@ -1653,18 +1578,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveLengthScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
-0
-.
-01
 '
 Inclusive
 length
@@ -1678,15 +1597,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusivePercentageScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 percentage
@@ -1700,15 +1616,12 @@ point
 '
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 inclusiveCalcScrollTimeline
 .
 currentTime
 expectedCurrentTime
-0
-.
-01
 '
 Inclusive
 calc
@@ -1895,15 +1808,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Length
 -
@@ -1952,15 +1862,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Length
 -
@@ -2009,7 +1916,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 lengthScrollTimeline
 .
@@ -2023,11 +1930,7 @@ scrollerSize
 scrollerSize
 -
 20
-100
 )
-0
-.
-01
 '
 Length
 -
@@ -2087,15 +1990,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Percentage
 -
@@ -2146,15 +2046,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Percentage
 -
@@ -2205,7 +2102,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 percentageScrollTimeline
 .
@@ -2221,11 +2118,7 @@ scrollTop
 8
 *
 scrollerSize
-100
 )
-0
-.
-01
 '
 Percentage
 -
@@ -2236,6 +2129,9 @@ time
 before
 the
 endScrollOffset
+'
++
+'
 point
 '
 )
@@ -2287,15 +2183,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Calc
 -
@@ -2348,15 +2241,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
 currentTime
 100
-0
-.
-01
 '
 Calc
 -
@@ -2407,7 +2297,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 calcScrollTimeline
 .
@@ -2425,11 +2315,7 @@ scrollTop
 scrollerSize
 +
 5
-100
 )
-0
-.
-01
 '
 Calc
 -
@@ -2565,7 +2451,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -2577,11 +2463,7 @@ calculateCurrentTime
 scrollerSize
 -
 50
-100
 )
-0
-.
-01
 )
 ;
 }
@@ -2592,6 +2474,9 @@ startScrollOffset
 and
 endScrollOffset
 together
+'
++
+'
 correctly
 '
 )
@@ -2674,15 +2559,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 )
 ;
 }
@@ -2775,15 +2657,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 0
-0
-.
-01
 )
 ;
 scroller
@@ -2797,15 +2676,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 )
 ;
 }
@@ -2942,7 +2818,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -2956,9 +2832,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -2998,7 +2871,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3012,9 +2885,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3048,7 +2918,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3062,9 +2932,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3104,7 +2971,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3118,9 +2985,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3154,7 +3018,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3168,9 +3032,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3210,7 +3071,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3224,9 +3085,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3260,7 +3118,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3274,9 +3132,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3316,7 +3171,7 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
@@ -3330,9 +3185,6 @@ p
 w
 *
 100
-0
-.
-01
 "
 current
 time
@@ -3358,15 +3210,12 @@ waitForNextFrame
 (
 )
 ;
-assert_percent_css_unit_value_approx_equals
+assert_percents_equal
 (
 scrollTimeline
 .
 currentTime
 100
-0
-.
-01
 "
 current
 time
